--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "pre": "prettier --write './**/*.{ts,tsx}'",
+    "precommit": "prettier --write"
   },
   "dependencies": {
     "next": "9.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.14",
+    "@types/react": "^16.9.15",
+    "axios": "^0.19.0",
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.3"
   }
 }
