--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "precommit": "prettier --write"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "bulma": "^0.8.0",
     "next": "9.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0"
