--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "bulma": "^0.8.0",
+    "firebase": "^7.6.1",
     "next": "9.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0"
